--- a/src/FIAPCloudGames.WebAPI/appsettings.Development.json
+++ b/src/FIAPCloudGames.WebAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FiapDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=localhost,1433;Database=FiapDB;User Id=sa;Password=H@rdPassw0rd;TrustServerCertificate=false;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
