--- a/src/FIAPCloudGames.WebAPI/appsettings.json
+++ b/src/FIAPCloudGames.WebAPI/appsettings.json
@@ -11,16 +11,26 @@
     "WriteTo": [
       { "Name": "Console" },
       {
-        "Name": "Seq",
+        "Name": "GrafanaLoki",
         "Args": {
-          "serverUrl": "http://localhost:5341"
+          "uri": "http://loki:3100",
+          "labels": [
+            {
+              "Key": "app",
+              "Value": "fcg-api"
+            },
+            {
+              "Key": "env",
+              "Value": "dev"
+            }
+          ]
         }
       }
     ],
     "Enrich": [ "FromLogContext" ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FiapDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=localhost,1433;Database=FIAPCloudGames;User Id=sa;Password=P@ssw0rdF1@PT3ch;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
